@@ -1,5 +1,5 @@
 /*
- *  $Id: device.c,v 1.21 2009/01/14 07:35:51 schmirl Exp $
+ *  $Id: device.c,v 1.22 2009/01/29 07:48:58 schmirl Exp $
  */
  
 #include "client/device.h"
@@ -84,6 +84,19 @@ bool cStreamdevDevice::ProvidesChannel(const cChannel *Channel, int Priority,
 		return false;
 
 	Dprintf("ProvidesChannel, Channel=%s, Prio=%d\n", Channel->Name(), Priority);
+
+	if (StreamdevClientSetup.MinPriority <= StreamdevClientSetup.MaxPriority)
+	{
+		if (Priority < StreamdevClientSetup.MinPriority ||
+				Priority > StreamdevClientSetup.MaxPriority)
+			return false;
+	}
+	else
+	{
+		if (Priority < StreamdevClientSetup.MinPriority &&
+				Priority > StreamdevClientSetup.MaxPriority)
+			return false;
+	}
 
 	if (ClientSocket.DataSocket(siLive) != NULL 
 			&& TRANSPONDER(Channel, m_Channel))
