@@ -1,6 +1,8 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
 
+- added Min/MaxPriority parameters. Can be used to keep client VDR from
+  using streamdev e.g. when recording
 - disabled PES for VDR 1.7.3+
 - added Network Media Tank browser support to HTML pages (thanks to Jori
   Hamalainen)
